--- a/params/liosam_params.yaml
+++ b/params/liosam_params.yaml
@@ -4,8 +4,8 @@ lio_sam:
   pointCloudTopic: "velodyne_points"               # Point cloud data
   imuTopic: "imu/data"                         # IMU data
   odomTopic: "odometry/filtered"                   # IMU pre-preintegration odometry, same frequency as IMU
-  gpsTopic: "odometry/gpsz"                   # GPS odometry topic from navsat, see module_navsat.launch file
-
+  gpsTopic: "odometry/gps"                   # GPS odometry topic from navsat, see module_navsat.launch file
+  #gpsTopic: /gps/fix
   # Frames
   lidarFrame: "velodyne"
   baselinkFrame: "base_link"
@@ -13,7 +13,7 @@ lio_sam:
   mapFrame: "map"
 
   # GPS Settings
-  useImuHeadingInitialization: true           # if using GPS data, set to "true"
+  useImuHeadingInitialization: true  # if using GPS data, set to "true"
   useGpsElevation: false                      # if GPS elevation is bad, set to "false"
   gpsCovThreshold: 2.0                        # m^2, threshold for using GPS data
   poseCovThreshold: 25.0                      # m^2, threshold for using GPS data
@@ -35,24 +35,27 @@ lio_sam:
   imuGyrNoise: 1.5636343949698187e-03
   imuAccBiasN: 6.4356659353532566e-05
   imuGyrBiasN: 3.5640318696367613e-05
-  imuGravity: -9.780318
+  #imuGravity: -9.780318
+  imuGravity: -9.774
   imuRPYWeight: 0.01
 
   # Extrinsics (lidar -> IMU)
-  extrinsicTrans: [-0.0621, 0.0, -0.041]
-  #extrinsicTrans: [0.0, 0.0, 0.0]
+  # Configuracion para soporte gris con base negra
+  extrinsicTrans: [0.04503, 0.0, -0.06]
+  #Configuracion para soporte con camara (Amarillo)
+  #extrinsicTrans: [0.0468, -0.0201, -0.05305]
   extrinsicRot: [1.0, 0.0, 0.0,
                  0.0, 1.0, 0.0,
                  0.0, 0.0, 1.0]
   extrinsicRPY: [1.0, 0.0, 0.0,
                  0.0, -1.0, 0.0,
                  0.0, 0.0, -1.0]
-  # extrinsicRot: [1, 0, 0,
+  #extrinsicRot: [1, 0, 0,
   #                 0, 1, 0,
   #                 0, 0, 1]
-  # extrinsicRPY: [1, 0, 0,
-  #                 0, 1, 0,
-  #                 0, 0, 1]
+  #extrinsicRPY: [1, 0, 0,
+  #               0, 1, 0,
+  #               0, 0, 1]
 
   # LOAM feature threshold
   edgeThreshold: 1.0
@@ -61,9 +64,9 @@ lio_sam:
   surfFeatureMinValidNum: 100
 
   # voxel filter paprams
-  odometrySurfLeafSize: 0.2                     # default: 0.4 - outdoor, 0.2 - indoor
-  mappingCornerLeafSize: 0.1                    # default: 0.2 - outdoor, 0.1 - indoor
-  mappingSurfLeafSize: 0.2                      # default: 0.4 - outdoor, 0.2 - indoor
+  odometrySurfLeafSize: 0.4                 # default: 0.4 - outdoor, 0.2 - indoor
+  mappingCornerLeafSize: 0.2                    # default: 0.2 - outdoor, 0.1 - indoor
+  mappingSurfLeafSize: 0.4                    # default: 0.4 - outdoor, 0.2 - indoor
 
   # robot motion constraint (in case you are using a 2D robot)
   z_tollerance: 1000                            # meters
@@ -101,12 +104,13 @@ navsat:
   frequency: 50
   wait_for_datum: false
   delay: 0.0
-  magnetic_declination_radians: 0
-  yaw_offset: 0
-  zero_altitude: true
+  yaw_offset: 1.5707963
+  #zero_altitude: true
+  zero_altitude: false
   broadcast_utm_transform: false
   broadcast_utm_transform_as_parent_frame: false
   publish_filtered_gps: false
+  magnetic_declination_radians: -0.1076
 
 # EKF for Navsat
 ekf_gps:
@@ -114,8 +118,8 @@ ekf_gps:
   map_frame: map
   odom_frame: odom
   base_link_frame: base_link
-  world_frame: odom
-
+  #world_frame: odom
+  world_frame: map
   frequency: 50
   two_d_mode: false
   sensor_timeout: 0.01
@@ -126,9 +130,9 @@ ekf_gps:
   # make sure the input is aligned with ROS REP105. "imu_correct" is manually transformed by myself. EKF can also transform the data using tf between your imu and base_link
   imu0_config: [false, false, false,
                 true,  true,  true,
-                false, false, false,
                 true, true, true,
-                false,  false,  false]
+                true, true, true,
+                true,  true,  true]
   imu0_differential: false
   imu0_queue_size: 50 
   imu0_relative: true
@@ -144,6 +148,7 @@ ekf_gps:
                  false, false, false]
   odom0_differential: false
   odom0_queue_size: 10
+  odom0_relative: true
 
   #                            x     y     z     r     p     y   x_dot  y_dot  z_dot  r_dot p_dot y_dot x_ddot y_ddot z_ddot
   process_noise_covariance: [  1.0,  0,    0,    0,    0,    0,    0,     0,     0,     0,    0,    0,    0,    0,      0,
